--- a/trunk/LoveGame_Project/AndroidManifest.xml
+++ b/trunk/LoveGame_Project/AndroidManifest.xml
@@ -21,7 +21,7 @@
         <activity
             android:name="com.example.lovegame_project.Menu_main"
             android:label="@string/app_name" >
-              <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -46,7 +46,6 @@
         <activity
             android:name="com.example.lovegame_project.Chat"
             android:label="@string/title_activity_chat" >
-          
         </activity>
         <activity
             android:name="com.example.lovegame_project.DeviceList"
@@ -59,6 +58,10 @@
         <activity
             android:name="com.example.lovegame_project.Instrucoes"
             android:label="@string/title_activity_instrucoes" >
+        </activity>
+        <activity
+            android:name="com.example.lovegame_project.FimDeJogo"
+            android:label="@string/title_activity_fim_de_jogo" >
         </activity>
     </application>
 
